# unit-iv-hunger-games

./: .gitignore  README.md  documentation.md  proposal.md  run_evosim_gui.bat  run_evosim_gui.py
backup/: simulation_controller_backup.py
evosim-docs/: README.md  package-lock.json  (+1 more)
evosim-simple/: .gitignore  demo_animal_list.py  main_game.py  pyproject.toml  requirements.txt  requirements_main_gui.txt  requirements_modern_gui.txt  run_gui.py  run_main_game.py  setup.py  simulation_data.json  test_animal_behavior.py  test_optimal_config.py  verify_installation.py
evosim-simple/analysis/: __init__.py  statistics.py  visualization.py
evosim-simple/config/: config_1760507576.376423.json  default_config.json  event_config.json  optimal_config.json
evosim-simple/docs/: HOW_TO_RUN.md  INSTALLATION_GUIDE.md  README.md  arcade-modern-gui-c4693346.plan.md  design.md  implementation.md  tasks.md
evosim-simple/src/: __init__.py  animal.py  environment.py  events.py  evolution.py  main.py  neural_network.py  simulation.py
evosim-simple/tests/: __init__.py  conftest.py  test_animal.py  test_animal_behavior.py  test_environment.py  test_evolution.py  test_gui.py  test_main.py  test_neural_network.py  test_optimal_config.py  test_simulation.py
evosim-simple/ui/: __init__.py  config_screen.py  gui.py  run_arcade_gui.py
evosim-simple/ui/arcade_gui/: __init__.py  animal_inspector.py  animation_effects.py  config_panel.py  constants.py  control_panel.py  grid_renderer.py  main_window.py  sprite_manager.py  stats_panel.py  tab_panel.py  theme.py  ui_components.py
(+93 files in other folders)
