[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evosim"
version = "0.1.0"
description = "Educational Survival Simulation Using Evolutionary Algorithms"
authors = [
    {name = "Ma. Catherine H. Bae"},
    {name = "Irheil Mae S. Antang"},
    {name = "Jin Harold A. Failana"},
    {name = "Emann Pabua"},
    {name = "Jhon Keneth Ryan B. Namias"},
    {name = "Ronan Renz T. Valencia"},
    {name = "Kevin A. Llanes"}
]
readme = "docs/README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0"
]
enhanced = [
    "pandas>=1.4.0",
    "seaborn>=0.11.0",
    "scipy>=1.8.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80"
]
